{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 63,
  "lineage": "c44d6134-f37a-fbc6-64b7-69eb579e64b8",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "demo-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c33d6608-8002-4e5c-ba8f-657b6e75ad70/resourceGroups/demo-rg/providers/Microsoft.Network/networkInterfaces/demo-nic",
            "internal_domain_name_suffix": "n51dqd5vdmhethfvz3oehsfx0e.tx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/c33d6608-8002-4e5c-ba8f-657b6e75ad70/resourceGroups/demo-rg/providers/Microsoft.Network/publicIPAddresses/demo-ip",
                "subnet_id": "/subscriptions/c33d6608-8002-4e5c-ba8f-657b6e75ad70/resourceGroups/demo-rg/providers/Microsoft.Network/virtualNetworks/demo-network/subnets/demo-subnet"
              }
            ],
            "location": "southindia",
            "name": "demo-nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "demo-rg",
            "tags": {
              "env": "test",
              "owner": "sumit",
              "source": "terraform"
            }
          },
          "dependencies": [
            "azurerm_public_ip.demo-ip",
            "azurerm_resource_group.demo-rg",
            "azurerm_subnet.demo-subnet",
            "azurerm_virtual_network.demo-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "demo-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c33d6608-8002-4e5c-ba8f-657b6e75ad70/resourceGroups/demo-rg/providers/Microsoft.Network/networkSecurityGroups/demo-sg",
            "location": "southindia",
            "name": "demo-sg",
            "resource_group_name": "demo-rg",
            "security_rule": [],
            "tags": {
              "env": "test",
              "owner": "sumit",
              "source": "terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.demo-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "demo-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/c33d6608-8002-4e5c-ba8f-657b6e75ad70/resourceGroups/demo-rg/providers/Microsoft.Network/networkSecurityGroups/demo-sg/securityRules/demo-dev-rule",
            "name": "demo-dev-rule",
            "network_security_group_name": "demo-sg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "demo-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.demo-sg",
            "azurerm_resource_group.demo-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "demo-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/c33d6608-8002-4e5c-ba8f-657b6e75ad70/resourceGroups/demo-rg/providers/Microsoft.Network/publicIPAddresses/demo-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "southindia",
            "name": "demo-ip",
            "resource_group_name": "demo-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "env": "test",
              "owner": "sumit",
              "source": "terraform"
            }
          },
          "dependencies": [
            "azurerm_resource_group.demo-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "demo-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.123.1.0/24",
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c33d6608-8002-4e5c-ba8f-657b6e75ad70/resourceGroups/demo-rg/providers/Microsoft.Network/virtualNetworks/demo-network/subnets/demo-subnet",
            "name": "demo-subnet",
            "resource_group_name": "demo-rg",
            "virtual_network_name": "demo-network"
          },
          "dependencies": [
            "azurerm_resource_group.demo-rg",
            "azurerm_virtual_network.demo-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "demo-sg-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c33d6608-8002-4e5c-ba8f-657b6e75ad70/resourceGroups/demo-rg/providers/Microsoft.Network/virtualNetworks/demo-network/subnets/demo-subnet",
            "network_security_group_id": "/subscriptions/c33d6608-8002-4e5c-ba8f-657b6e75ad70/resourceGroups/demo-rg/providers/Microsoft.Network/networkSecurityGroups/demo-sg",
            "subnet_id": "/subscriptions/c33d6608-8002-4e5c-ba8f-657b6e75ad70/resourceGroups/demo-rg/providers/Microsoft.Network/virtualNetworks/demo-network/subnets/demo-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.demo-sg",
            "azurerm_resource_group.demo-rg",
            "azurerm_subnet.demo-subnet",
            "azurerm_virtual_network.demo-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "demo-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "0f38f66f-1bf5-490e-9cb5-cf5c43c8b7d4",
            "id": "/subscriptions/c33d6608-8002-4e5c-ba8f-657b6e75ad70/resourceGroups/demo-rg/providers/Microsoft.Network/virtualNetworks/demo-network",
            "location": "southindia",
            "name": "demo-network",
            "resource_group_name": "demo-rg",
            "tags": {
              "env": "test",
              "owner": "sumit",
              "source": "terraform"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.demo-rg"
          ]
        }
      ]
    }
  ]
}